--- a/tool.css
+++ b/tool.css
@@ -15,21 +15,23 @@ body.tool {
 .right {
   width: 100%;
   display: flex;
-  vertical-align: center;
   justify-content: center;
+  margin: 30px 0;
+  background: grey;
 }
 .container{
-  margin: 20px;
   transform-origin: 0 0;
-
-  /* ratio: 1685/2382 */
-  transform: scale(0.319059614);
-  width: 537px;
-  height: 760px;
-
   transform: scale(0.293870697);
-  width: 495px;
+  width: 495.172124265px;
   height: 700px;
+}
+body.downloading .container{
+  transform: scale(1);
+  width: 1685px;
+  height: 2382px;
+}
+body.downloading {
+  opacity: 0;
 }
 .poster {
   display: block;
@@ -74,7 +76,7 @@ body.tool {
   top: 2040px;
   left: 74px;
   right: 74px;
-  bottom: 15px;
+  bottom: 45px;
   border-top: 2px solid #231F20;
   text-align: left;
   overflow: hidden;
@@ -84,16 +86,18 @@ body.tool {
 }
 .poster .logos .section{
   padding-top: 30px;
+  width: 100%;
 }
 .poster .logos .section.summons {
   margin-right: 40px;
+  flex-shrink: 4;
 }
 .poster .logos .section .text {
   font-family: 'Ursula';
   font-size: 46px;
   color: #67A5B5;
   text-transform: none;
-  color: black;
+  color: #231F20;
 }
 .poster .logos .section .images{
   display: flex;
@@ -105,18 +109,14 @@ body.tool {
 }
 .poster .logos .section .images img {
   margin-top: 10px;
-  height: 220px;
+  height: 180px;
   width: auto;
   display: block;
-  margin-right: 30px;
+  margin-right: 40px;
 }
 .poster .support-er,
 .poster .support-affac{
   order: 2;
-}
-
-.render {
-  /*position: fixed;*/
 }
 
 .setup {
@@ -125,11 +125,21 @@ body.tool {
   background: #efefef;
 }
 
+.setup a.back {
+  color: #231F20;
+  text-align: left;
+  font: bold 16px/1.1 'oswald';
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  display: block;
+}
 .setup h1 {
   padding: 0 0 10px;
-  color: black;
+  color: #231F20;
   text-align: left;
   font: bold 50px/1.1 'oswald';
+  max-width: 600px;
+  margin: 0;
 }
 
 .setup .row {
@@ -137,9 +147,10 @@ body.tool {
 }
 
 .setup label {
-  color: black;
+  color: #231F20;
   text-align: left;
   font: bold 20px/1.1 'oswald';
+  text-transform: uppercase;
   display: block;
   margin-bottom: 10px;
 }
@@ -148,11 +159,14 @@ body.tool {
   width: 100%; 
   font-size: 20px;
   padding: 10px;
+  border: 1px solid #d3dbe2;
+  border-radius: 3px;
+  background: #ffffff;
 }
 
 .setup input[type=file]{
   width: 100%;
-  font-size: 20px;
+  font-size: 18px;
   display: block;
   margin: 20px 0;
 }
@@ -162,6 +176,42 @@ body.tool {
   padding: 10px;
   display: block;
   width: 100%;
+}
+
+.shopify-select {
+  border: 1px solid #d3dbe2;
+  border-radius: 3px;
+  box-sizing: border-box;
+  position: relative;
+  background: #ffffff;
+  overflow: hidden;
+  vertical-align: bottom;
+  max-width: 100%;
+}
+
+.shopify-select select {
+  color: #333;
+  font-size: 18px;
+  padding: 10px;
+  padding-right: 32px;
+  border: 0;
+  width: 100%;
+  background: transparent;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+.shopify-select .shopify-select-icon {
+  cursor: pointer;
+  display: block;
+  fill: #798c9c;
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  margin-top: -6px;
+  pointer-events: none;
+  width: 12px;
+  height: 12px;
+  vertical-align: middle;
 }
 
 .setup input[type=checkbox]{
@@ -180,22 +230,44 @@ body.tool {
 
 .setup .download{
   text-decoration: none;
-  color: black;
   display: block;
   text-align: center;
   color: white;
-  background: black;
+  background: #231F20;
   border-radius: 5px;
   width: 100%;
   font-size: 20px;
   padding: 10px;
+  font-family: 'Oswald', sans-serif;
+  text-transform: uppercase;
 }
 
-@media (max-width: 940px) {
-  html, body{
-    overflow: auto;
+@media (max-width: 1020px){
+  .right {
+    margin: 0;
   }
-  body {
-    text-align: left;
-  }
+}
+@media (max-width: 820px){
+ .layout {
+   flex-direction: column;
+ }
+ .right {
+  order: -1;
+  margin: 30px 0;
+ }
+ .container{
+   transform: scale(0.178041543);
+   width: 300px;
+   height: 424px;
+ }
+ .setup {
+   padding: 20px;
+ }
+ .setup h1 {
+   padding: 0 0 10px;
+   font: bold 34px/1.1 'oswald';
+ }
+ .setup a.back {
+  display: none;
+}
 }
